--- a/index.html
+++ b/index.html
@@ -26,17 +26,36 @@
       document.addEventListener('DOMContentLoaded', function() {
         // see how what the example spreadsheet looks like:
         // https://docs.google.com/spreadsheet/lv?key=0Ao5u1U6KYND7dGN5QngweVJUWE16bTRob0d2a3dCbnc
-        var URL = "0Ao5u1U6KYND7dGN5QngweVJUWE16bTRob0d2a3dCbnc"
+        var URL = "1Gv_bkfOBh3HvjLSutcqXg4Kw8ufxWyjWo4Fj34whqfc"
         Tabletop.init( { key: URL, callback: showInfo, simpleSheet: true } )
       })
 
       function showInfo(data) {
         // the column headers of the info you want in your popup
-        var optionsJSON = ["placename", "photo-url"]
+        var optionsJSON = ["Full Address", "Profile Address"]
         // an html template for your popup
-        var template = "<ul><li><a href='{{photo-url}}' target='_blank'>"
-                     + "<img src='{{photo-url}}'></a></li>"
-                     + "<li><h4>{{placename}}</h4></li></ul>"
+        var template = "<div style="width:400px;">"
++ "<a href='{{Profile Address}}' target='_blank'><img src='https://storage.ning.com/topology/rest/1.0/file/get/405442624?profile=original' width="40%"></a>"
+   + "<h4>{{Country}}</h4>"
+   + "<h1> {{Name}}</h1>"
+   + "<b>Profile Address</b>: <a href='{{Profile Address}}' target='_blank'>Visit Profile</a><br>"
+   + "<b>Location</b>: {{Location}}<br>"
++ "<details>"
++ "<summary>More information about this member's experience in land surveying</summary>"
+ + "   <b>Country</b>: {{Country}}<br>"
+ + "   <b>UserName</b>: {{UserName}}<br>"
+ + "   <b>I am here because I am a...</b>: {{I am here because I am a...}}<br>"
+ + "   <b>Which Region of the World do you Survey?</b>: {{Which Region of the World do you Survey?}}<br>"
+ + "   <b>How long have you been surveying?</b>: {{How long have you been surveying?}}<br>"
+ + "   <b>Company Name</b>: {{Company Name}}<br>"
+ + "   <b>Is your company for hire for surveying related services locally?</b>: {{Is your company for hire for surveying related services locally?}}<br>"
+ + "   <b>Current Position</b>: {{Current Position}}<br>"
+ + "   <b>Areas Licensed or Registered</b>: {{Areas Licensed or Registered}}<br>"
+ + "   <b>Best Method of Contact- If phone, Your Number</b>: {{Best Method of Contact- If phone, Your Number}}<br>"
+ + "   <b>Please tell other members why you are here:</b>: {{Please tell other members why you are here:}}<br>"
+ + "   <b>Surveying Mentorship:</b>: {{Surveying Mentorship:}}<br>"
+ + "   <b>I have experience with the following</b>: {{I have experience with the following}}<br></details>"
++ "</div>"
         var geoJSON = Sheetsee.createGeoJSON(data, optionsJSON)
         var map = Sheetsee.loadMap("map")
         // Try different map tiles? examples.map-20v6611k
