--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="js/sheetsee.js"></script>
     <link   type='text/css' rel='stylesheet' href='http://api.tiles.mapbox.com/mapbox.js/v1.0.0/mapbox.css'>
     <!-- Add a Title -->
-    <title>Map</title>
+    <title>Land Surveyors United Member Map</title>
   </head>
   <style>
     html {width: 100%; height: 100%;}
@@ -26,7 +26,7 @@
       document.addEventListener('DOMContentLoaded', function() {
         // see how what the example spreadsheet looks like:
         // https://docs.google.com/spreadsheet/lv?key=0Ao5u1U6KYND7dGN5QngweVJUWE16bTRob0d2a3dCbnc
-        var URL = "1Gv_bkfOBh3HvjLSutcqXg4Kw8ufxWyjWo4Fj34whqfc"
+        var URL = "1OMCM_2ULnRt2dt-reTgXO1wYIkxhKVjOMHYWSJ03a1E"
         Tabletop.init( { key: URL, callback: showInfo, simpleSheet: true } )
       })
 
